The login endpoint now only requires the discord auth code, everything that has to do with the tokens will be handled server side
